Bug 370184 - Existing Filter search value field gets deleted when clicking on it
Summary: Existing Filter search value field gets deleted when clicking on it
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-06 07:37 UTC by BingMyBong
Modified: 2016-10-06 11:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3.2
Sentry Crash Report:


Attachments
Shows area before any changes (16.99 KB, image/png)
2016-10-06 07:39 UTC, BingMyBong
Details
Data area display after clicking in box (12.72 KB, image/png)
2016-10-06 07:40 UTC, BingMyBong
Details
Display of data field to show data field diaplay area not large enough (11.77 KB, image/png)
2016-10-06 07:42 UTC, BingMyBong
Details

Note You need to log in before you can comment on or make changes to this bug.
Description BingMyBong 2016-10-06 07:37:12 UTC
Currently the field containing the data to compare against does not display the contents fully so if you click on the right hand side of the data in the box to see what is there, the data is immediately deleted so you cannot see what was there.

Reproducible: Always

Steps to Reproduce:
1. Select Filter rules
2. Select exiting filter
3. Select a data field where the data is larger than the display area
4. Click on the right hand side of the data in the box
5. The contents of the is deleted

Actual Results:  
Depending where you click in the data box when the contents exceed the displayable area, the content will be deleted, i.e. on the far right of the data - see attachments

Expected Results:  
You should be able to click anywhere in the data entry area to view existing contents
Comment 1 BingMyBong 2016-10-06 07:39:16 UTC
Created attachment 101443 [details]
Shows area before any changes

1. Before any changes
Display of 3 out of the 4 data entry areas are larger than the displayable area
Comment 2 BingMyBong 2016-10-06 07:40:34 UTC
Created attachment 101444 [details]
Data area display after clicking in box

2. Clicked on right hand side of data in 3rd box - data cleared
Comment 3 BingMyBong 2016-10-06 07:42:32 UTC
Created attachment 101445 [details]
Display of data field to show data field diaplay area not large enough

3. Click on left hand side of data and move cursor to the left to show data display area stops in the middle of the box
Comment 4 Laurent Montel 2016-10-06 11:31:10 UTC
Git commit 2cc7f743cc28a32604a934605c588932bdbd164e by Montel Laurent.
Committed on 06/10/2016 at 11:30.
Pushed by mlaurent into branch 'Applications/16.08'.

Fix Bug 370184 - Existing Filter search value field gets deleted when clicking on it

FIXED-IN: 5.3.2

M  +4    -0    src/search/widgethandler/headersrulerwidgethandler.cpp
M  +4    -0    src/search/widgethandler/messagerulewidgethandler.cpp
M  +4    -0    src/search/widgethandler/tagrulewidgethandler.cpp
M  +4    -0    src/search/widgethandler/textrulerwidgethandler.cpp

http://commits.kde.org/mailcommon/2cc7f743cc28a32604a934605c588932bdbd164e