Fix Bug 370184 - Existing Filter search value field gets deleted when clicking on it

FIXED-IN: 5.3.2
BUG: 370184